--- a/docnote/MainWindow.xaml
+++ b/docnote/MainWindow.xaml
@@ -13,10 +13,11 @@
         DataContext="{Binding Main, Source={StaticResource Locator}}"
         GlowBrush="{DynamicResource AccentColorBrush}"
         SaveWindowPosition="True"
+        MinWidth="650" MinHeight="300"
         WindowStartupLocation="CenterScreen">
+    <DockPanel>
 
-    <Grid>
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -26,52 +27,61 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Label FontSize="21.333">Список пацієнтів</Label>
-        <StackPanel Grid.Column="1" Orientation="Horizontal">
-            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50"
+        </Grid.ColumnDefinitions>-->
+        <DockPanel DockPanel.Dock="Top">
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="10 0 20 0">
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0 0 10 0"
+                        Command="{Binding OpenDoctorCommand}">
+                    <iconPacks:PackIconFontAwesome Kind="UserMd" Width="30" Height="30"/>
+                </Button>
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding OpenHospitalCommand}">
+                    <iconPacks:PackIconFontAwesome Kind="HospitalOutline" Width="30" Height="30"/>
+                </Button>
+            </StackPanel>
+            <Label FontSize="21.333" DockPanel.Dock="Right" VerticalAlignment="Center" Margin="10 0 0 0">Список пацієнтів</Label>
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Top">
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right" Margin="10 0 20 0">
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Margin="0 0 10 0"
                     Command="{Binding AddPatientClickCommand}">
-                <iconPacks:PackIconFontAwesome Kind="Plus"/>
-            </Button>
-            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" 
+                    <iconPacks:PackIconFontAwesome Kind="Plus"/>
+                </Button>
+                <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" 
                     Command="{Binding DeletePatientClickCommand}"
                     CommandParameter="{Binding ElementName=PatientsGrid, Path=SelectedItem}">
-                <iconPacks:PackIconFontAwesome Kind="Minus"/>
-            </Button>
-        </StackPanel>
-        <StackPanel Grid.Column="2" Orientation="Horizontal">
-            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding OpenDoctorCommand}">
-                <iconPacks:PackIconFontAwesome Kind="UserMd" Width="30" Height="30"/>
-            </Button>
-            <Button Style="{DynamicResource MetroCircleButtonStyle}" Width="50" Height="50" Command="{Binding OpenHospitalCommand}">
-                <iconPacks:PackIconFontAwesome Kind="HospitalOutline" Width="30" Height="30"/>
-            </Button>
-        </StackPanel>
-        <Label Grid.Row="1" Content="Пошук за прізвищем"/>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="SearchByLNameBox">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="TextChanged">
-                    <i:InvokeCommandAction Command="{Binding SearchPatientsByLNameCommand}"
+                    <iconPacks:PackIconFontAwesome Kind="Minus"/>
+                </Button>
+            </StackPanel>
+            <Label Content="Пошук за прізвищем" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+            <TextBox x:Name="SearchByLNameBox" Margin="30 0 30 0" Height="15">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction Command="{Binding SearchPatientsByLNameCommand}"
                                            CommandParameter="{Binding ElementName=SearchByLNameBox, Path=Text}"/>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-        </TextBox>
-        <DataGrid Grid.Row="2" Grid.ColumnSpan="4" x:Name="PatientsGrid"  Margin="15" ItemsSource="{Binding Patients}" IsReadOnly="True" AutoGenerateColumns="False" RowDetailsVisibilityMode="{Binding RowDetailsVisible}" >
-
-            <DataGrid.Resources>
-                <!--<resources:SexConverter x:Key="sexConverter"/>-->
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+        </DockPanel>
+        <DataGrid x:Name="PatientsGrid"  Margin="10"
+                  ItemsSource="{Binding Patients}" IsReadOnly="True" AutoGenerateColumns="False" RowDetailsVisibilityMode="{Binding RowDetailsVisible}" >
+            <!--<DataGrid.Resources>
+                -->
+            <!--<resources:SexConverter x:Key="sexConverter"/>-->
+            <!--
                 <Style x:Key="MyGridStyle" TargetType="{x:Type Grid}">
                     <Style.Resources>
                         <Style TargetType="{x:Type TextBlock}">
                             <Setter Property="Foreground" Value="Black" />
                         </Style>
-                        <!--<Style TargetType="{x:Type TextBox}">
+                        -->
+            <!--<Style TargetType="{x:Type TextBox}">
                                         <Setter Property="Foreground" Value="Red" />
                                     </Style>-->
+            <!--
                     </Style.Resources>
                 </Style>
-            </DataGrid.Resources>
-                       
+            </DataGrid.Resources>-->
+
             <!--<i:Interaction.Triggers>
                             <i:EventTrigger EventName="MouseLeftButtonUp">
                                 <i:InvokeCommandAction Command="{Binding PatientLBMouseUpCommand}"/>
@@ -79,30 +89,65 @@
                         </i:Interaction.Triggers>-->
 
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding FirstName}"
-                                Header="Ім'я">
+                <DataGridTextColumn Binding="{Binding FirstName}" Header="Ім'я" Width="*">
+                    <!--<DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="Width" Value="*" />
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>-->
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding MiddleName}"
-                                Header="По-Батькові">
+                <DataGridTextColumn Binding="{Binding MiddleName}" Header="По-Батькові" Width="*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding LastName}"
-                                Header="Прізвище">
+                <DataGridTextColumn Binding="{Binding LastName}" Header="Прізвище" Width="*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding Path=BirthDate, StringFormat={}{0:dd/MM/yyyy}}"
-                                Header="Дата Народження">
+                <DataGridTextColumn Binding="{Binding Path=BirthDate, StringFormat={}{0:dd/MM/yyyy}}" Header="Дата Народження" Width="1.5*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding PhoneNumber}"
-                                Header="Телефон">
+                <DataGridTextColumn Binding="{Binding PhoneNumber}" Header="Телефон" Width="*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Binding="{Binding ParentName}"
-                                Header="Батьки">
+                <DataGridTextColumn Binding="{Binding ParentName}" Header="Батьки" Width="*">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="HorizontalAlignment" Value="Center" />
+                            <Setter Property="Padding" Value="7 0" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
                 <!--<DataGridCheckBoxColumn ElementStyle="{DynamicResource MetroDataGridCheckBox}"
                                         EditingElementStyle="{DynamicResource MetroDataGridCheckBox}"
                                         Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=IsSelected, Mode=OneWay}"
                                         />-->
-                
-                
+
+
                 <!--<DataGridTextColumn Binding="{Binding Sex, Converter={StaticResource sexConverter}}"
                                 Header="Стать">
                 </DataGridTextColumn>-->
@@ -147,6 +192,6 @@
                                           CommandParameter="{Binding ElementName=PatientsGrid, Path=SelectedItem}"/>
             </DataGrid.InputBindings>
         </DataGrid>
-    </Grid>
+    </DockPanel>
 
 </Controls:MetroWindow>
